# DeepMoon

./: .gitattributes  .gitignore  DeepMoon_Correction1.ipynb  DeepMoon_starter.ipynb  GoogleIO_Poster.ipynb  Image_Plotter.ipynb  Image_Plotter_paper.ipynb  Insight.ipynb  LICENSE.md  License  Paper_images.ipynb  README.md  check_csv_conv.py  compare_frac_errs.py  get_crater_dist.py  get_unique_craters.py  get_unique_craters_debug.py  global_f1score.py  input_data_gen.py  input_data_genOLD.py  make_dataset.py  make_input_data.py  model.py  model_train.py  model_train_v2.py  post_processed_craters_plot.py  requirements.txt  run.sh  run_get_unique_craters.py  run_input_data_gen.py  run_model_train.pbs  run_model_train.py  setup.cfg  setup.py  starter.ipynb  todo.txt  train_model.py  tune_craterextract_hypers.py  tune_craterextract_submitjobs.py  tune_guc_submitjobs.py
catalogues/: HeadCraters.csv
configs/: test.yaml  train.yaml  train.yml
crater_catalogues/: LROCCraters.csv
datasets/: README.md
deepmoon/: __init__.py  __main__.py  training.py
docs/: Using Zenodo Data.ipynb
models/: README.md
technical/: inst_conda.txt  inst_pip.txt  instalation_pipeline.sh
tests/: README.md  sample_crater_csv.hdf5  sample_crater_csv_metadata.hdf5  sample_template_match.hdf5  test_get_unique_craters.py  test_input_data_gen.py  test_make_input_data.py  test_model_train.py  test_utils.py
torchmoon/: __init__.py  __main__.py  __version__.py  hyperparameter.py  logger.py  training.py
utils/: preprocessing.py  processing.py  template_match_target.py  transform.py
(+56 files in other folders)
